# riskless-pain

./: LICENSE.txt  MANIFEST.in  README.rst  create-executables.sh  pyproject.toml
src/risklesspain/: PyQtGuiLoggingHandler.py  loggingsetup.py  main.py
src/risklesspain/test-files/: pain.001.001.03.ch.02_base.xml  pain.001.001.03.ch.02_base_following_month.xml  pain.001.001.03.ch.02_colab_system_http.xml  pain.001.001.09_base.xml  pain.001.001.09_base_added_ChrgBr.xml  pain.001.001.09_base_changed_PmtId.xml  pain.001.001.09_base_following_month.xml  pain.001.001.09_colab_doctype.xml  pain.001.001.09_colab_document_entity.xml  pain.001.001.09_colab_system_http.xml  pain.001.001.09_document_entity_passwd.xml  pain.001.001.09_hand_crafted_everything.xml  pain.001.001.09_hand_crafted_everything_modified.xml  pain.001.001.09_xinclude.xml
src/risklesspain/test-files-internet/: pain.001.001.03_1.xml  pain.001.001.09_1.xml  pain.001.001.09_2.xml  pain.001.001.09_3.xml  pain.001.001.09_4.xml  pain.001.001.09_5.xml  pain.001.001.09_6.xml
src/risklesspain/ui/: main_window.ui
